<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HockeyNight</string>
    <string name="bet_name">BetActivity</string>
    <string name="action_settings">Settings</string>
    <string name="update">Actualiser</string>
    <string name="Text">Essai</string>
    <string name="team">Equipes</string>
    <string name="goal">Goal</string>
    <string name="penalty">Pénalitées</string>
    <string name="tiret"> - </string>
    <string name="zero">0</string>
    <string name="date"> - </string>
    <string name="period">1 per</string>
    <string name="time"> 20:00 </string>
</resources>